# mpd-switchboard

./: .env.development  .env.production  .gitignore  Dockerfile  Makefile  README.md  TECH_GUIDE.md  docker-compose.yml  pyproject.toml
app/: .env.development  .env.production  Makefile  README.md  config.yml  docker-compose.ingest.yml  docker-compose.production.yml  docker-compose.yml  pyproject.toml  start.sh  startup.sh  switchboard-key.pem
app/api/: Dockerfile  auth.py  main.py  manage_users.py  pyproject.toml  requirements.txt
app/certs/: selfsigned.crt  selfsigned.key
app/elasticsearch-init/: Dockerfile  main.py  reindex.py
app/frontend/: Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
app/frontend/assets/css/: variables.css
app/frontend/components/: EmailStats.vue  ProcurementHeatmap.vue  Sidebar.vue  VendorTimeline.vue
app/frontend/components/common/: LoadingSpinner.vue
app/frontend/components/visualizations/: DomainBarChart.vue  DomainHeatmap.vue  DomainNetwork.vue  EntityNetwork.vue  TopicSimilarityNetwork.vue  TopicTSNE.vue  TopicUMAP.vue
app/frontend/composables/: useAuth.ts  useCustomAuth.ts  useEmailStats.js  useFinancialStats.js
app/frontend/layouts/: default.vue
app/frontend/middleware/: auth.global.ts  auth.ts
app/frontend/pages/: index.vue  login.vue
app/frontend/pages/search/: index.vue
app/frontend/plugins/: auth.ts
app/frontend/public/_d3_data/: connection_distribution.json  domain_network.json  entity_network.json  financial_data.json
app/frontend/public/d3_data/: connection_distribution copy.json  connection_distribution.json  domain_bar_chart.json  domain_heatmap.json  entity_network.json
app/frontend/public/vdata/: domain_network_complete.json
app/frontend/router/: index.js
app/frontend/services/: api.js  api.ts
app/ingestion/: ingest.py
app/nginx/: development.conf  nginx.conf  production.conf  rate_limiting.conf  switchboard.conf
app/snapshots/: index-0  index-1
app/snapshots/indices/m_DGYXfMT9-dR6tDH9eCig/0/: index-vIISwE-BSC6cI65s91369Q
certs/: selfsigned.crt  selfsigned.key
elasticsearch-init/: Dockerfile  main.py
nginx/: default.conf  default.conf.template
pre-processing/: README.md  advanced_graph_viz.py  app.py  berttopic_topic_modeling.py  create_df.py  create_viz.py  doc-size-analysis.py  email_network_analysis.py  generate_email_report.py  ocr-check.py  preview_df.py  redact.py  run-ocr.py  topic_report.csv  unselectable_pdfs.txt  viz.py
reports/: meta_data.json
reports/email_analysis/: email_statistics.json  top_emailers.csv
reports/email_analysis/d3_data/: domain_network.json
thesis/: Makefile  main.py  pyproject.toml
thesis/viz/: Dockerfile  package-lock.json  package.json
thesis/viz/assets/css/: main.css  variables.css
thesis/viz/components/: LegendItem.vue  Sidebar.vue  VendorBarChart.vue  VendorTimeline.vue
thesis/viz/components/visualizations/: DomainCommunication.vue  EntityNetwork.vue  TopicSimilarityNetwork.vue  TopicTSNE.vue  TopicWordCloud.vue
thesis/viz/composables/: useEmailStats.js
thesis/viz/pages/: index.vue
thesis/viz/public/d3_data/: entity_network.json  topic_info_analysis.json  topic_similarity_analysis.json  topic_tsne_analysis.json  topic_umap_analysis.json
thesis/viz/public/vdata/: domain_heatmap.json
