[tool.poetry]
name = "switchboard"
authors = ["Atilio Barreda/D4BL <atilio@miski.studio>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
fpdf = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
