[tool.poetry]
name = "switchboard"
authors = ["Atilio Barreda/D4BL <atilio@miski.studio>"]
readme = "README.md"
version = "1.0.0"
description = "API for the Switchboard"

[tool.poetry.dependencies]
python = "^3.10.15"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
fpdf = "^1.7.2"
pdfminer-six = "^20240706"
ocrmypdf = "^16.5.0"
pymupdf = "^1.24.10"
boto3 = "^1.35.39"
requests-aws4auth = "^1.3.1"
elasticsearch = "^8.15.1"
uvicorn = ">=0.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
