[tool.poetry]
name = "switchboard-api"
version = "0.1.0"
description = "Switchboard API Service"
authors = ["Atilio Barreda II"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
elasticsearch = "7.10.1"
pydantic = "^2.4.2"
python-multipart = "^0.0.6"  # For file uploads
httpx = "^0.25.1"  # For async HTTP requests
python-jose = "^3.3.0"  # For JWT handling
passlib = "^1.7.4"  # For password hashing

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"